@@ -228,6 +228,8 @@ debbugs (2.4.2) UNRELEASED; urgency=low
   * No longer hard-code paths in age-1 (closes: #499682)
   * Change how maybelink links links (closes: #501757)
   * Use bug_subscription_domain in process (closes: #499680)
+  * Clean up links when there is no information about a package (closes:
+    #452905)
 
   
  -- Colin Watson <cjwatson@debian.org>  Fri, 20 Jun 2003 18:57:25 +0100
